--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
+# Django
 Django>=5.0
 pillow
 openpyxl
 reportlab
 python-dateutil
+
+# Production
+gunicorn>=21.0
+psycopg2-binary>=2.9
+whitenoise>=6.6
+python-dotenv>=1.0
+dj-database-url>=2.1
+
+# Security
+django-cors-headers>=4.3
